# dictionary-bot

./: .gitignore  .travis.yml  Makefile  README.md  TODO  bridge.py  config.py  constants.py  daemonize.py  dictbot.conf  dictbot.conf.example  dictbot.conf.sample  dictbot.py  eng-kan-bot.py  eng-kn-bot.monitrc  httphandler.py  knwikiparser.py  loghandler.py  requirements.txt  setup.cfg  start-eng-kan-bot.sh  stop-en-kan-bot.sh  tox.ini  wiktionary.py  wiktionary.sqlite
dictbot/: __init__.py  accounthandler.py  bridge.py  cli.py  config.py  langstrings.py  loghandler.py  pluginloader.py  replyhandler.py  wiktionary.py  xmppmessage.py
dictbot/parsers/: knwiktionary.py  mlwiktionary.py  wiktionary.py
etc/: dictbot.conf
parsers/: __init__.py  wiktionary.py
tests/: test_config.py  test_pluginloader.py  test_wiktionaryparsers.py
tests/resources/confs/: empty-plugins.conf  invalid-parser.conf  missing-accounts.conf  missing-jabber.conf  missing-jid.conf  missing-lang.conf  missing-password.conf  missing-plugin.conf  valid.conf
wiktionaryparsers/: knwikiparser.py  mlwikiparser.py  wiktionaryparser.py
