[metadata]
name = dictionary-bot
author = Vasudev Kamath
author-email = kamathvasudev@gmail.com
summary = XMPP based dictionary bot framework
license = GPL-3
description-file =
  README.md
home-page = https://github.com/copyninja/dictionary-bot
requires-python = >=2.7
classifier =
  Development Stauts :: 4-Beta
  Environment :: Console
  Intended Audience :: Developer
  Intended Audience :: Information Technology
  Operating System :: OS Independent
  Programming Language :: Python
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[entry_points]
console_scripts =
  dictbot = dictbot.cli:main

[files]
data_files =
  etc = etc/dictbot.conf